-- SYNTAX TEST "Packages/Haskell/Cabal.sublime-syntax"

cabal-version:   >=2.2
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^^^^ meta.mapping.key.cabal
--           ^ meta.mapping.cabal
--            ^^^^^^^^^ meta.mapping.value.version.cabal
-- ^^^^^^^^^^ entity.name.tag.cabal
--           ^ punctuation.separator.key-value.cabal
--               ^^ keyword.operator.comparison.cabal
--                 ^^^ meta.number.version.cabal constant.numeric.value.cabal
--                  ^ punctuation.separator.decimal.cabal

Name:            pandoc
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^ meta.mapping.key.cabal
--  ^ meta.mapping.cabal
--   ^^^^^^^^^^^^^^^^^^^ meta.mapping.value.other.cabal
-- ^ entity.name.tag.cabal
--  ^ punctuation.separator.key-value.cabal

Version:         2.11.3.1
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^ meta.mapping.key.cabal
--     ^ meta.mapping.cabal
--      ^^^^^^^^^^^^^^^^^^ meta.mapping.value.version.cabal
-- ^^^^ entity.name.tag.cabal
--     ^ punctuation.separator.key-value.cabal
--               ^^^^^^^^ meta.number.version.cabal constant.numeric.value.cabal
--                ^ punctuation.separator.decimal.cabal
--                   ^ punctuation.separator.decimal.cabal
--                     ^ punctuation.separator.decimal.cabal

Author: Jon Doe <jon.doe@nowhere.com>
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^^ meta.mapping.key.cabal
--    ^ meta.mapping.cabal
--     ^^^^^^^^^ meta.mapping.value.other.cabal
--              ^ meta.mapping.value.other.cabal meta.path.email.cabal - markup.underline.link
--               ^^^^^^^^^^^^^^^^^^^ meta.mapping.value.other.cabal meta.path.email.cabal markup.underline.link.cabal
--                                  ^ meta.mapping.value.other.cabal meta.path.email.cabal - markup.underline.link
--                                   ^ meta.mapping.value.other.cabal - meta.path
--^^^^ entity.name.tag.cabal
--    ^ punctuation.separator.key-value.cabal
--              ^ punctuation.definition.path.begin.cabal
--                      ^ punctuation.separator.path.email.cabal
--                              ^ punctuation.separator.path.domain.cabal
--                                  ^ punctuation.definition.path.end.cabal

Maintainer: cabal-devel@haskell.org
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^^^^^^ meta.mapping.key.cabal
--        ^ meta.mapping.cabal
--         ^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.other.cabal
--          ^^^^^^^^^^^^^^^^^^^^^^^ meta.path.email.cabal markup.underline.link.cabal
--^^^^ entity.name.tag.cabal
--        ^ punctuation.separator.key-value.cabal
--                     ^ punctuation.separator.path.email.cabal
--                             ^ punctuation.separator.path.domain.cabal

Tests: True
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^ meta.mapping.key.cabal
--   ^ meta.mapping.cabal
--    ^^^^^^ meta.mapping.value.boolean.cabal
--^^^ entity.name.tag.cabal
--   ^ punctuation.separator.key-value.cabal
--     ^^^^ constant.language.boolean.cabal

Optimization: False
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^^^^^^^^ meta.mapping.key.cabal
--          ^ meta.mapping.cabal
--           ^^^^^^^ meta.mapping.value.boolean.cabal
--^^^^^^^^^^ entity.name.tag.cabal
--          ^ punctuation.separator.key-value.cabal
--            ^^^^ constant.language.boolean.cabal

Build-type:      Simple
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^ meta.mapping.key.cabal
--        ^ meta.mapping.cabal
--         ^^^^^^^^^^^^^ meta.mapping.value.other.cabal
-- ^^^^^^^ entity.name.tag.cabal
--        ^ punctuation.separator.key-value.cabal

Bug-reports:     https://github.com/sublime%20hq/Packages/issues?action=new
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^^ meta.mapping.key.cabal
--         ^ meta.mapping.cabal
--          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.urls.cabal
-- ^^^^^^^^ entity.name.tag.cabal
--         ^ punctuation.separator.key-value.cabal
--               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.path.url.cabal markup.underline.link.cabal
--                    ^^^ punctuation.separator.path.cabal
--                                 ^ punctuation.separator.path.cabal
--                                         ^^^ constant.character.escape.url.cabal
--                                              ^ punctuation.separator.path.cabal
--                                                       ^ punctuation.separator.path.cabal
--                                                              ^ punctuation.separator.path.cabal

homepage:
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^ meta.mapping.key.cabal
--      ^ meta.mapping.cabal
--       ^ meta.mapping.value.urls.cabal
-- ^^^^^ entity.name.tag.cabal
--      ^ punctuation.separator.key-value.cabal
    https://sublimehq.com
-- ^ meta.mapping.value.urls.cabal - markup.underline.link - string
--  ^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.urls.cabal meta.path.url.cabal markup.underline.link.cabal
--                       ^ meta.mapping.value.urls.cabal - markup.underline.link - string
--       ^^^ punctuation.separator.path.cabal

Flags: +embed_data_files -trypandoc "+Dkey: value"
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^ meta.mapping.key.cabal
--   ^ meta.mapping.cabal
--    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.options.cabal
--^^^ entity.name.tag.cabal
--   ^ punctuation.separator.key-value.cabal
--     ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--      ^^^^^^^^^^^^^^^^ variable.parameter.option.haskell - punctuation
--                       ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--                        ^^^^^^^^^ variable.parameter.option.haskell - punctuation
--                                  ^^^^^^^^^^^^^^ meta.string.cabal string.quoted.double.cabal

Ghc-options: -j +RTS -A64m -RTS
-- <- meta.mapping.key.cabal entity.name.tag.cabal
--^^^^^^^^^ meta.mapping.key.cabal
--         ^ meta.mapping.cabal
--          ^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.options.cabal
--^^^^^^^^^ entity.name.tag.cabal
--         ^ punctuation.separator.key-value.cabal
--           ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--            ^ variable.parameter.option.haskell - punctuation
--              ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--               ^^^ variable.parameter.option.haskell - punctuation
--                   ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--                    ^^^^ variable.parameter.option.haskell - punctuation
--                         ^ variable.parameter.option.haskell punctuation.definition.variable.haskell
--                          ^^^ variable.parameter.option.haskell - punctuation

Exposed-modules: ,
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^^^^^^ meta.mapping.key.cabal
--             ^ meta.mapping.cabal
--              ^^^ meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^ entity.name.tag.cabal
--             ^ punctuation.separator.key-value.cabal
--               ^ punctuation.separator.sequence.cabal

Exposed-modules: ModId.ModName,
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^^^^^^ meta.mapping.key.cabal
--             ^ meta.mapping.cabal
--               ^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^ entity.name.tag.cabal
--             ^ punctuation.separator.key-value.cabal
--               ^^^^^ variable.namespace.haskell
--                    ^ punctuation.accessor.dot.haskell
--                     ^^^^^^^ variable.namespace.haskell
--                            ^ punctuation.separator.sequence.cabal
     ModId.ModId.ModName
-- <- meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
--   ^^^^^ variable.namespace.haskell
--        ^ punctuation.accessor.dot.haskell
--         ^^^^^ variable.namespace.haskell
--              ^ punctuation.accessor.dot.haskell
--               ^^^^^^^ variable.namespace.haskell

exposed-modules: ModId.ModName
-- ^^^^^^^^^^^^ meta.mapping.key.cabal
--             ^ meta.mapping.cabal
--              ^^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^ entity.name.tag.cabal
--             ^ punctuation.separator.key-value.cabal
--               ^^^^^ variable.namespace.haskell
--                    ^ punctuation.accessor.dot.haskell
--                     ^^^^^^^ variable.namespace.haskell
        ModId.ModId.ModName
-- <- meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
--      ^^^^^ variable.namespace.haskell
--           ^ punctuation.accessor.dot.haskell
--            ^^^^^ variable.namespace.haskell
--                 ^ punctuation.accessor.dot.haskell
--                  ^^^^^^^ variable.namespace.haskell
NoModule
-- <- - meta.modules - meta.mapping

other-modules: ModId.ModName
-- ^^^^^^^^^^ meta.mapping.key.cabal
--           ^ meta.mapping.cabal
--            ^^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
-- ^^^^^^^^^^ entity.name.tag.cabal
--           ^ punctuation.separator.key-value.cabal
--             ^^^^^ variable.namespace.haskell
--                  ^ punctuation.accessor.dot.haskell
--                   ^^^^^^^ variable.namespace.haskell
        ModId.ModId.ModName
-- <- meta.mapping.value.modules.cabal
-- ^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.modules.cabal
--      ^^^^^ variable.namespace.haskell
--           ^ punctuation.accessor.dot.haskell
--            ^^^^^ variable.namespace.haskell
--                 ^ punctuation.accessor.dot.haskell
--                  ^^^^^^^ variable.namespace.haskell
NoModule
-- <- - meta.modules - meta.mapping

data-files:
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^ meta.mapping.key.cabal entity.name.tag.cabal
--        ^ meta.mapping.cabal punctuation.separator.key-value.cabal
--         ^ meta.mapping.value.paths.cabal
                 -- documentation
                 INSTALL.md, AUTHORS.md, README.md,
--              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.paths.cabal
--              ^ - meta.path - markup.underline.link - string
--               ^^^^^^^^^^ meta.path.file.cabal markup.underline.link.cabal
--                         ^^ - meta.path - markup.underline.link - string
--                         ^ punctuation.separator.sequence.cabal
--                           ^^^^^^^^^^ meta.path.file.cabal markup.underline.link.cabal
--                                     ^^ - meta.path - markup.underline.link - string
--                                     ^ punctuation.separator.sequence.cabal
--                                       ^^^^^^^^^ meta.path.file.cabal markup.underline.link.cabal
--                                                ^^ - meta.path - markup.underline.link - string
--                                                ^ punctuation.separator.sequence.cabal

                 -- templates
                 ../data/template?.../**/styles.html
--              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.paths.cabal
--              ^ - meta.path - markup.underline.link - string
--               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.path.file.cabal markup.underline.link.cabal
--               ^^ constant.language.path.parent.cabal
--                 ^ punctuation.separator.path.cabal
--                      ^ punctuation.separator.path.cabal
--                               ^ keyword.operator.wildcard.cabal
--                                ^^^ - constant
--                                   ^ punctuation.separator.path.cabal
--                                    ^^ keyword.operator.wildcard.cabal
--                                      ^ punctuation.separator.path.cabal
--                                                  ^ - meta.path - markup.underline.link - string

build-depends:  pandoc,
-- <- meta.mapping.key.cabal entity.name.tag.cabal
-- ^^^^^^^^^^ meta.mapping.key.cabal
--           ^ meta.mapping.cabal
--            ^^^^^^^^^^ meta.mapping.value.dependencies.cabal
-- ^^^^^^^^^^ entity.name.tag.cabal
--           ^ punctuation.separator.key-value.cabal
        base    >= 4.8 && < 5,
--      ^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.dependencies.cabal
--              ^^ keyword.operator.comparison.cabal
--                 ^^^ meta.number.version.cabal constant.numeric.value.cabal
--                     ^^ keyword.operator.logical.cabal
--                        ^ keyword.operator.comparison.cabal
--                          ^ meta.number.version.cabal constant.numeric.value.cabal
--                           ^ punctuation.separator.sequence.cabal
        containers ^>= 0.4.2.1 && < 0.7,
--      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.dependencies.cabal
--                 ^^^ keyword.operator.comparison.cabal
--                     ^^^^^^^ meta.number.version.cabal constant.numeric.value.cabal
--                             ^^ keyword.operator.logical.cabal
--                                ^ keyword.operator.comparison.cabal
--                                  ^^^ meta.number.version.cabal constant.numeric.value.cabal
--                                     ^ punctuation.separator.sequence.cabal

Executable
-- <- meta.toc-list.sections.cabal keyword.declaration.section.cabal
-- ^^^^^^^ meta.toc-list.sections.cabal keyword.declaration.section.cabal

executable pandoc
-- <- meta.toc-list.sections.cabal keyword.declaration.section.cabal
-- ^^^^^^^^^^^^^^ meta.toc-list.sections.cabal
-- ^^^^^^^ keyword.declaration.section.cabal
--         ^^^^^^ entity.name.section.cabal

  build-depends: pandoc, base >= 4.8 && < 5
  -- <- meta.mapping.key.cabal entity.name.tag.cabal
  --^^^^^^^^^^^ meta.mapping.key.cabal
  --           ^ meta.mapping.cabal
  --            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.dependencies.cabal
  --^^^^^^^^^^^ entity.name.tag.cabal
  --           ^ punctuation.separator.key-value.cabal
  --                   ^ punctuation.separator.sequence.cabal
  --                          ^^ keyword.operator.comparison.cabal
  --                             ^^^ meta.number.version.cabal constant.numeric.value.cabal

  if !impl(ghc < 8.*)
  -- <- keyword.control.conditional.cabal
  --  ^^^^ meta.function-call.identifier.cabal
  --      ^^^^^^^^^^^ meta.function-call.arguments.cabal meta.group.cabal
  -- ^ keyword.operator.logical.cabal
  --  ^^^^ variable.function.cabal
  --      ^ punctuation.section.group.begin.cabal
  --       ^^^ constant.language.compiler.cabal
  --           ^ keyword.operator.comparison.cabal
  --             ^^^ meta.number.version.cabal constant.numeric.value.cabal
  --               ^ keyword.operator.wildcard.cabal
  --                ^ punctuation.section.group.end.cabal
     hs-source-dirs: prelude
     -- <- meta.mapping.key.cabal entity.name.tag.cabal
     other-modules:  Prelude
     -- <- meta.mapping.key.cabal entity.name.tag.cabal
     build-depends:  base-compat >= 0.9
     -- <- meta.mapping.key.cabal entity.name.tag.cabal
  else
--^^^^ keyword.control.conditional.cabal
     build-depends:  base-compat ^>= 1.*
     -- <- meta.mapping.key.cabal entity.name.tag.cabal
     --                          ^^^ keyword.operator.comparison.cabal
     --                              ^^^ meta.number.version.cabal constant.numeric.value.cabal

  default-language: Haskell2010
  -- <- meta.mapping.key.cabal entity.name.tag.cabal
  other-extensions: NoImplicitPrelude
  -- <- meta.mapping.key.cabal entity.name.tag.cabal

library
-- <- keyword.declaration.section.cabal
--^^^^^ keyword.declaration.section.cabal

library name
-- <- keyword.declaration.section.cabal
--^^^^^ keyword.declaration.section.cabal
--      ^^^^ entity.name.section.cabal

source-repository-package
-- <- meta.toc-list.sections.cabal keyword.declaration.section.cabal
-- ^^^^^^^^^^^^^^^^^^^^^^ meta.toc-list.sections.cabal keyword.declaration.section.cabal
  type: git
--^^^^ meta.mapping.key.cabal entity.name.tag.cabal
--    ^ meta.mapping.cabal punctuation.separator.key-value.cabal
--     ^^^^^^ meta.mapping.value.other.cabal

  location: https://github.com/foo/bar
--^^^^^^^^ meta.mapping.key.cabal entity.name.tag.cabal
--        ^ meta.mapping.cabal punctuation.separator.key-value.cabal
--         ^ meta.mapping.value.urls.cabal - meta.path - markup
--          ^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.urls.cabal meta.path.url.cabal markup.underline.link.cabal
--                                    ^ meta.mapping.value.urls.cabal - meta.path - markup

  tag: 4f4fbe277044de0724dd0828a45311ab1413e30b
--^^^ meta.mapping.key.cabal entity.name.tag.cabal
--   ^ meta.mapping.cabal punctuation.separator.key-value.cabal
--    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.other.cabal

  subdir: commonmark-extensions
--^^^^^^ meta.mapping.key.cabal entity.name.tag.cabal
--      ^ meta.mapping.cabal punctuation.separator.key-value.cabal
--       ^ meta.mapping.value.paths.cabal - meta.path - markup
--        ^^^^^^^^^^^^^^^^^^^^^ meta.mapping.value.paths.cabal meta.path.file.cabal markup.underline.link.cabal
--                             ^ meta.mapping.value.paths.cabal - meta.path - markup